--- a/package.json
+++ b/package.json
@@ -1,46 +1,44 @@
 {
-  "name": "kretostan-portfolio",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.10",
-    "axios": "^1.10.0",
-    "bcryptjs": "^3.0.2",
-    "framer-motion": "^12.5.0",
-    "i18next": "^25.3.6",
-    "i18next-browser-languagedetector": "^8.2.0",
-    "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-i18next": "^15.6.1",
-    "react-router": "^7.8.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@types/react-router": "^5.1.20",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "prettier": "^3.6.2",
-    "sharp": "^0.34.4",
-    "svgo": "^4.0.0",
-    "tailwindcss": "^4.1.10",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "vite-plugin-image-optimizer": "^2.0.2",
-    "vite-plugin-sitemap": "^0.8.2",
-    "vite-plugin-svgr": "^4.5.0"
-  }
+	"name": "kretostan-portfolio",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"biome:lint": "biome lint .",
+		"biome:format": "biome format .",
+		"biome:check": "biome check . --write",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@biomejs/biome": "^2.3.14",
+		"@tailwindcss/vite": "^4.1.10",
+		"axios": "^1.10.0",
+		"bcryptjs": "^3.0.2",
+		"framer-motion": "^12.5.0",
+		"i": "^0.3.7",
+		"i18next": "^25.3.6",
+		"i18next-browser-languagedetector": "^8.2.0",
+		"next-themes": "^0.4.6",
+		"npm": "^11.9.0",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"react-i18next": "^15.6.1",
+		"react-router": "^7.8.0"
+	},
+	"devDependencies": {
+		"@types/react": "^19.1.2",
+		"@types/react-dom": "^19.1.2",
+		"@types/react-router": "^5.1.20",
+		"@vitejs/plugin-react-swc": "^3.9.0",
+		"sharp": "^0.34.4",
+		"svgo": "^4.0.0",
+		"tailwindcss": "^4.1.10",
+		"typescript": "^5.9.2",
+		"vite": "^6.3.5",
+		"vite-plugin-image-optimizer": "^2.0.2",
+		"vite-plugin-sitemap": "^0.8.2",
+		"vite-plugin-svgr": "^4.5.0"
+	}
 }
