--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,6 +15,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Biome check (lint + format)
+        run: npx biome check .
+
       - name: Create env file
         run: |
           echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> .env
