--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@biomejs/biome": "^2.3.14",
+		"@biomejs/biome": "2.3.15",
 		"@tailwindcss/vite": "^4.1.10",
 		"axios": "^1.10.0",
 		"bcryptjs": "^3.0.2",
