--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
 	"version": "1.0.2",
 	"type": "module",
 	"packageManager": "pnpm@10.30.0",
+	"engines": {
+		"node": ">=22"
+	},
 	"scripts": {
 		"dev": "vite --host 0.0.0.0",
 		"build": "tsc -b && vite build",
